@@ -1,3 +1,9 @@
+2005-05-19 Paul Jakma <paul@dishone.st>
+
+	* thread.c: (thread_cancel_event) the number of pending events
+	  cancelled is potentially useful information, dont throw it away,
+	  pass it back to the caller.
+
 2005-05-15 Paul Jakma <paul@dishone.st>
 
 	* getopt.h: It's not just __GNU_LIBRARY__ which defines
